--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -3,73 +3,80 @@
   "version": "1.4.8",
   "private": true,
   "dependencies": {
+    "@functionland/fula-sec": "*",
     "@functionland/react-native-fula": "*",
+    "@gorhom/bottom-sheet": "*",
+    "@metamask/sdk-react": "*",
     "@react-native-async-storage/async-storage": "*",
+    "@react-native-clipboard/clipboard": "*",
     "@react-native-community/netinfo": "*",
+    "@react-native-community/slider": "*",
+    "@react-native-firebase/app": "*",
+    "@react-native-firebase/crashlytics": "*",
     "@react-native-picker/picker": "*",
+    "@react-native/metro-config": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
+    "@react-navigation/stack": "*",
+    "@react-spring/three": "*",
+    "@react-three/fiber": "*",
+    "@shopify/react-native-skia": "*",
     "@shopify/restyle": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
-    "@react-native-firebase/app": "*",
-    "@react-native-firebase/crashlytics": "*",
+    "@visx/scale": "*",
+    "@walletconnect/encoding": "*",
+    "@walletconnect/react-native-compat": "*",
+    "@web3modal/wagmi-react-native": "*",
     "axios": "*",
+    "big-integer": "*",
     "expo": "*",
+    "expo-gl": "*",
+    "expo-three": "*",
+    "lodash": "*",
+    "metro-config": "*",
+    "moment": "*",
     "node-libs-react-native": "*",
     "react": "*",
+    "react-content-loader": "*",
     "react-native": "*",
+    "react-native-background-timer": "*",
+    "react-native-ble-manager": "*",
     "react-native-config": "*",
     "react-native-device-info": "*",
+    "react-native-elements": "*",
     "react-native-gesture-handler": "*",
+    "react-native-get-random-values": "*",
+    "react-native-keyboard-aware-scroll-view": "*",
+    "react-native-keychain": "*",
     "react-native-localize": "*",
+    "react-native-modal": "*",
     "react-native-pager-view": "*",
+    "react-native-paper": "*",
     "react-native-randombytes": "*",
     "react-native-reanimated": "*",
+    "react-native-reanimated-carousel": "*",
     "react-native-redash": "*",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
     "react-native-svg": "*",
+    "react-native-svg-transformer": "*",
     "react-native-tab-view": "*",
+    "react-native-url-polyfill": "*",
     "react-native-webview": "*",
+    "react-native-wheel-color-picker": "*",
     "react-native-wifi-reborn": "*",
     "react-native-zeroconf": "*",
-    "zustand": "*",
-    "@react-three/fiber": "*",
-    "expo-gl": "*",
-    "expo-three": "*",
-    "three": "*",
-    "@visx/scale": "*",
-    "@shopify/react-native-skia": "*",
-    "@react-spring/three": "*",
-    "@gorhom/bottom-sheet": "*",
-    "react-native-wheel-color-picker": "*",
-    "@react-native-community/slider": "*",
-    "react-native-reanimated-carousel": "*",
-    "lodash": "*",
-    "@react-native-clipboard/clipboard": "*",
-    "react-native-svg-transformer": "*",
-    "moment": "*",
-    "@react-navigation/stack": "*",
-    "@functionland/fula-sec": "*",
     "text-encoding-polyfill": "*",
-    "react-native-keychain": "*",
-    "react-native-keyboard-aware-scroll-view": "*",
-    "react-native-ble-manager": "*",
-    "react-native-get-random-values": "*",
-    "react-native-modal": "*",
-    "big-integer": "*",
-    "@walletconnect/encoding": "*",
-    "metro-config": "*",
-    "@react-native/metro-config": "*",
-    "@walletconnect/react-native-compat": "*",
-    "wagmi": "*",
+    "three": "*",
     "viem": "*",
-    "@web3modal/wagmi-react-native": "*",
-    "react-content-loader": "*",
-    "react-native-elements": "*",
-    "react-native-paper": "*"
+    "wagmi": "*",
+    "zustand": "*",
+    "@types/react-native-background-timer": "*"
+  },
+  "devDependencies": {
+    "@types/react-native-background-timer": "^2.0.2"
   }
 }
