--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-env": "^7.1.6",
     "@ethersproject/shims": "^5.7.0",
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.41.0",
+    "@functionland/react-native-fula": "1.43.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@metamask/sdk-react": "^0.14.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
@@ -42,6 +42,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "react-native-paper": "*",
     "@react-spring/three": "^9.7.3",
     "@react-three/fiber": "^8.15.11",
     "@rneui/base": "^4.0.0-rc.8",
