--- a/bitrise.yml
+++ b/bitrise.yml
@@ -13,6 +13,13 @@ workflows:
     steps:
     - activate-ssh-key@4: {}
     - git-clone@6: {}
+    - script@1:
+        title: Install node-gyp globally
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            set -ex
+            yarn global add node-gyp
     - yarn@0:
         inputs:
         - command: install
@@ -51,6 +58,13 @@ workflows:
     steps:
     - activate-ssh-key@4: {}
     - git-clone@6: {}
+    - script@1:
+        title: Install node-gyp globally
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            set -ex
+            yarn global add node-gyp
     - nvm@1:
         inputs:
         - node_version: 16.18.1
@@ -93,6 +107,13 @@ workflows:
     steps:
     - activate-ssh-key@4: {}
     - git-clone@8.1: {}
+    - script@1:
+        title: Install node-gyp globally
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            set -ex
+            yarn global add node-gyp
     - yarn@0:
         inputs:
         - command: install
@@ -185,6 +206,13 @@ workflows:
     steps:
     - activate-ssh-key@4: {}
     - git-clone@8.1: {}
+    - script@1:
+        title: Install node-gyp globally
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            set -ex
+            yarn global add node-gyp
     - yarn@0:
         inputs:
         - command: install
