--- a/libs/component-library/project.json
+++ b/libs/component-library/project.json
@@ -7,10 +7,7 @@
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/component-library/**/*.{ts,tsx,js,jsx}"]
-      }
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -31,6 +28,6 @@
           "libs/component-library/package.json"
         ]
       }
-    }    
+    }
   }
 }
