--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "react-native-paper": "*",
     "@react-spring/three": "^9.7.3",
     "@react-three/fiber": "^8.15.11",
     "@rneui/base": "^4.0.0-rc.8",
@@ -57,7 +56,7 @@
     "axios": "^1.6.2",
     "big-integer": "^1.6.52",
     "eciesjs": "^0.4.6",
-    "ethers": "^6.10.0",
+    "ethers": "5.7.2",
     "expo": "49.0.21",
     "expo-asset": "*",
     "expo-font": "*",
@@ -82,6 +81,7 @@
     "react-native-localize": "^3.0.4",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "*",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^3.6.1",
@@ -107,14 +107,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@nrwl/js": "17.1.3",
-    "@nrwl/workspace": "17.1.3",
-    "@nx/detox": "17.1.3",
-    "@nx/eslint": "17.1.3",
-    "@nx/eslint-plugin": "17.1.3",
-    "@nx/jest": "17.1.3",
-    "@nx/react-native": "17.1.3",
-    "@nx/web": "17.1.3",
+    "@nrwl/js": "17.3.1",
+    "@nrwl/workspace": "17.3.1",
+    "@nx/detox": "17.3.1",
+    "@nx/eslint": "17.3.1",
+    "@nx/eslint-plugin": "17.3.1",
+    "@nx/jest": "17.3.1",
+    "@nx/react-native": "17.3.1",
+    "@nx/web": "17.3.1",
     "@react-native-community/cli": "12.2.0",
     "@react-native-community/cli-platform-android": "12.2.0",
     "@react-native-community/cli-platform-ios": "12.2.0",
@@ -126,15 +126,15 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "29.5.10",
     "@types/lodash": "^4.14.202",
-    "@types/node": "20.10.1",
+    "@types/node": "^18.16.9",
     "@types/react": "18.2.39",
     "@types/react-native-background-timer": "^2.0.2",
     "@types/three": "^0.159.0",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "babel-jest": "29.7.0",
     "detox": "20.13.5",
-    "eslint": "8.54.0",
+    "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jest": "^27.6.0",
@@ -150,7 +150,7 @@
     "metro-babel-register": "0.80.1",
     "metro-react-native-babel-preset": "0.77.0",
     "metro-resolver": "0.80.1",
-    "nx": "17.1.3",
+    "nx": "17.3.1",
     "prettier": "3.1.0",
     "react-native-config": "1.5.1",
     "react-test-renderer": "18.2.0",
