Add Foreground notification system

--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
 
     <application
       android:name=".MainApplication"
@@ -30,6 +32,8 @@
           <category android:name="android.intent.category.BROWSABLE" />
           <data android:scheme="fxblox" />
         </intent-filter>
-      </activity>
+      </activity>      
+      <service android:name="com.asterinet.react.bgactions.RNBackgroundActionsTask"  android:exported="false" />
+      <service android:name="app.notifee.core.ForegroundService" android:foregroundServiceType="dataSync" />
     </application>
 </manifest>
