--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -7,6 +7,7 @@
     "@functionland/react-native-fula": "*",
     "@gorhom/bottom-sheet": "*",
     "@metamask/sdk-react": "*",
+    "@notifee/react-native": "*",
     "@react-native-async-storage/async-storage": "*",
     "@react-native-clipboard/clipboard": "*",
     "@react-native-community/netinfo": "*",
