--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@functionland/react-native-fula": "1.44.1",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@metamask/sdk-react": "^0.14.2",
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/netinfo": "^11.1.1",
