--- a/apps/box/android/app/build.gradle
+++ b/apps/box/android/app/build.gradle
@@ -100,6 +100,9 @@ android {
     }
     packagingOptions {
         pickFirst 'lib/arm64-v8a/liblog.so'
+        pickFirst 'lib/armeabi-v7a/liblog.so'
+        pickFirst 'lib/x86/liblog.so'
+        pickFirst 'lib/x86_64/liblog.so'
         // Add other libraries here if necessary
     }
     buildTypes {
