--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -26,9 +26,8 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-pod 'Fula', :podspec => 'https://raw.githubusercontent.com/functionland/go-fula/main/Fula.podspec'
-
 target 'Box' do
+  pod 'Fula', :podspec => 'https://raw.githubusercontent.com/functionland/go-fula/main/Fula.podspec'
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -37,13 +36,13 @@ target 'Box' do
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
-    :hermes_enabled => flags[:hermes_enabled],
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    # :flipper_configuration => flipper_config,
+    #:flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -54,11 +53,13 @@ target 'Box' do
   end
 
   post_install do |installer|
+    PLIST_BUDDY_PATH = '/usr/libexec/PlistBuddy'
     # https://github.com/facebook/react-native/issues/43335
     installer.pods_project.targets.each do |target|
       # https://stackoverflow.com/questions/74517344/when-compiling-with-xcode14-i-get-error-unsupported-swift-architecture-how-to-s
       target.build_configurations.each do |config|
         config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
       end
       if target.name == 'Flipper'
         file_path = 'Pods/Flipper/xplat/Flipper/FlipperTransportTypes.h'
@@ -67,6 +68,19 @@ target 'Box' do
           File.open(file_path, 'w') do |file|
             file.puts('#include <functional>')
             file.puts(contents)
+          end
+        end
+      end
+      if target.name == "hermes-engine"
+        installer.pods_project.files.each do |fileref|
+          if fileref.path.end_with? "hermes.xcframework"
+            hermes_plist_file = "#{fileref.real_path}/Info.plist"
+            # Patch Hermes to remove the debug symbols entry from the Info.plist (as it's not shipped with it)
+            # This might be removed once Hermes starts to ship with Debug symbols or we remove our
+            # direct dependency from the Main iOS target on "hermes.xcframework"
+            Open3.capture3(PLIST_BUDDY_PATH, '-c', 'Delete :AvailableLibraries:0:DebugSymbolsPath', hermes_plist_file)
+            Open3.capture3(PLIST_BUDDY_PATH, '-c', 'Delete :AvailableLibraries:1:DebugSymbolsPath', hermes_plist_file)
+            Open3.capture3(PLIST_BUDDY_PATH, '-c', 'Delete :AvailableLibraries:2:DebugSymbolsPath', hermes_plist_file)
           end
         end
       end
