--- a/apps/box/ios/Box/Info.plist
+++ b/apps/box/ios/Box/Info.plist
@@ -68,5 +68,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 </dict>
 </plist>
