--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "@babel/preset-env": "^7.1.6",
     "@ethersproject/shims": "^5.7.0",
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.54.20",
+    "@functionland/react-native-fula": "1.54.22",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@metamask/sdk-react": "^0.14.2",
     "@notifee/react-native": "^7.8.2",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.12.1",
-    "@react-native-community/netinfo": "^11.1.1",
-    "@react-native-community/slider": "^4.4.3",
+    "@react-native-community/netinfo": "9.3.10",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-firebase/app": "^18.7.1",
     "@react-native-firebase/crashlytics": "^18.7.1",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -47,7 +47,7 @@
     "@react-three/fiber": "^8.15.11",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@shopify/react-native-skia": "^0.1.224",
+    "@shopify/react-native-skia": "0.1.196",
     "@shopify/restyle": "^2.4.2",
     "@visx/scale": "^3.5.0",
     "@walletconnect/encoding": "^1.0.2",
@@ -59,41 +59,42 @@
     "eciesjs": "^0.4.6",
     "ethers": "5.7.2",
     "expo": "49.0.21",
-    "expo-asset": "*",
-    "expo-font": "*",
-    "expo-gl": "^13.2.0",
+    "expo-asset": "~8.10.1",
+    "expo-font": "~11.4.0",
+    "expo-gl": "~13.0.1",
     "expo-three": "^7.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
-    "react-dom": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.10",
     "react-native-background-timer": "^2.4.1",
     "react-native-ble-manager": "^10.1.5",
     "react-native-device-info": "^10.12.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "~1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.2",
     "react-native-localize": "^3.0.4",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^6.2.3",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "*",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.1",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "^13.6.3",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "13.2.2",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.10.1",
     "react-native-zeroconf": "^0.13.8",
