--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" 
+                 tools:node="remove"/>
 
     <application
       android:name=".MainApplication"
