--- a/bitrise.yml
+++ b/bitrise.yml
@@ -280,7 +280,8 @@ workflows:
                     - content: |-
                         #!/bin/bash
                         set -ex
-                        RUBY_VERSION=3.1.4
+                        RUBY_VERSION=3.3.5
+                        asdf plugin update ruby
                         asdf install ruby $RUBY_VERSION
                         asdf global ruby $RUBY_VERSION
     - activate-ssh-key@4: {}
