--- a/apps/box/ios/Box/Info.plist
+++ b/apps/box/ios/Box/Info.plist
@@ -54,6 +54,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Looking for local mDNS/Bonjour services to find the iOT device over local wifi</string>
+	<key>NSBonjourServices</key>
+	<array>
+	<string>_fulatower._tcp</string>
+	</array>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app uses Bluetooth to connect to nearby devices for setting up the hardware iOT device locally without wifi.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
