--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -77,7 +77,8 @@
     "zustand": "*",
     "@types/react-native-background-timer": "*",
     "ethers": "*",
-    "whatwg-fetch": "*"
+    "whatwg-fetch": "*",
+    "react-native-permissions": "*"
   },
   "devDependencies": {
     "@types/react-native-background-timer": "^2.0.2"
