--- a/apps/box/ios/Box/Info.plist
+++ b/apps/box/ios/Box/Info.plist
@@ -54,6 +54,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>LSMinimumSystemVersion</key>
+	<string>12.0</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Looking for local mDNS/Bonjour services to find the iOT device over local wifi</string>
 	<key>NSBonjourServices</key>
