--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@functionland/fula-sec": "^2.0.0",
     "@functionland/react-native-fula": "1.54.27",
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@metamask/sdk-react": "^0.14.2",
+    "@metamask/sdk": "^0.30.0",
+    "@metamask/sdk-react": "^0.30.0",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.12.1",
