--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -1,4 +1,5 @@
 use_modular_headers!
+
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -28,6 +29,7 @@ end
 
 target 'Box' do
   pod 'Fula', :podspec => 'https://raw.githubusercontent.com/functionland/go-fula/main/Fula.podspec'
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
   config = use_native_modules!
 
   # Flags change depending on the env values.
