--- a/.github/workflows/android_deploy.yml
+++ b/.github/workflows/android_deploy.yml
@@ -1,6 +1,9 @@
 name: FxBlox Android Deploy
 
-on: [push]
+on: 
+  workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   deploy-android:
