--- a/.github/workflows/android_deploy.yml
+++ b/.github/workflows/android_deploy.yml
@@ -9,11 +9,20 @@ jobs:
   deploy-android:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '20' # Use the same Node.js version as your project requirements
+    - name: Set up JDK 18
+      uses: actions/setup-java@v3
+      with:
+        java-version: '18'
+        distribution: 'temurin'
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+      with:
+        packages: 'cmdline-tools;latest'
     - name: Yarn Install
       run: yarn install
     - name: Ensure Symlink
