--- a/.github/workflows/android_deploy.yml
+++ b/.github/workflows/android_deploy.yml
@@ -39,14 +39,14 @@ jobs:
       run: echo $GITHUB_ENV
     - name: Build Android Release
       run: |
-        cd ${{ github.workspace }}/apps/box/android
+        cd ${{ github.workspace }}/apps/box/android/apps/box/android
         ./gradlew assembleRelease
     - name: List Directory
-      run: ls -la ${{ github.workspace }}
+      run: ls -la ${{ github.workspace }}/apps/box/android/app/build/outputs/apk/release
     - name: Sign APK
       uses: r0adkll/sign-android-release@v1
       with:
-        releaseDirectory: ${{ github.workspace }}/app/build/outputs/apk/release
+        releaseDirectory: ${{ github.workspace }}/apps/box/android/app/build/outputs/apk/release
         signingKeyBase64: ${{ secrets.SIGNING_KEY_BASE64 }}
         alias: ${{ secrets.KEY_ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -56,5 +56,5 @@ jobs:
       with:
         serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         packageName: land.fx.blox
-        releaseFiles: ${{ github.workspace }}/app/build/outputs/apk/release/app-release.apk
+        releaseFiles: ${{ github.workspace }}/apps/box/android/app/build/outputs/apk/release/app-release.apk
         track: production
