--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -8,13 +8,13 @@
     "@gorhom/bottom-sheet": "*",
     "@metamask/sdk-react": "*",
     "@notifee/react-native": "*",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "*",
     "@react-native-clipboard/clipboard": "*",
-    "@react-native-community/netinfo": "9.3.10",
-    "@react-native-community/slider": "4.4.2",
+    "@react-native-community/netinfo": "*",
+    "@react-native-community/slider": "*",
     "@react-native-firebase/app": "*",
     "@react-native-firebase/crashlytics": "*",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "*",
     "@react-native/metro-config": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
@@ -23,7 +23,7 @@
     "@react-navigation/stack": "*",
     "@react-spring/three": "*",
     "@react-three/fiber": "*",
-    "@shopify/react-native-skia": "0.1.196",
+    "@shopify/react-native-skia": "*",
     "@shopify/restyle": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
@@ -34,7 +34,7 @@
     "axios": "*",
     "big-integer": "*",
     "expo": "*",
-    "expo-gl": "~13.0.1",
+    "expo-gl": "*",
     "expo-three": "*",
     "lodash": "*",
     "metro-config": "*",
@@ -42,31 +42,31 @@
     "node-libs-react-native": "*",
     "react": "*",
     "react-content-loader": "*",
-    "react-native": "0.72.10",
+    "react-native": "*",
     "react-native-background-timer": "*",
     "react-native-ble-manager": "*",
     "react-native-config": "*",
     "react-native-device-info": "*",
     "react-native-elements": "*",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "~1.9.0",
+    "react-native-gesture-handler": "*",
+    "react-native-get-random-values": "*",
     "react-native-keyboard-aware-scroll-view": "*",
     "react-native-keychain": "*",
     "react-native-localize": "*",
     "react-native-modal": "*",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "*",
     "react-native-paper": "*",
     "react-native-randombytes": "*",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "*",
     "react-native-reanimated-carousel": "*",
     "react-native-redash": "*",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
+    "react-native-svg": "*",
     "react-native-svg-transformer": "*",
     "react-native-tab-view": "*",
     "react-native-url-polyfill": "*",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "*",
     "react-native-wheel-color-picker": "*",
     "react-native-wifi-reborn": "*",
     "react-native-zeroconf": "*",
@@ -78,9 +78,14 @@
     "@types/react-native-background-timer": "*",
     "ethers": "*",
     "whatwg-fetch": "*",
-    "react-native-permissions": "*"
+    "react-native-permissions": "*",
+    "expo-modules-core": "*",
+    "@react-native/gradle-plugin": "*",
+    "react-native-crypto": "*",
+    "readable-stream": "*",
+    "react-native-fs": "*"
   },
   "devDependencies": {
-    "@types/react-native-background-timer": "^2.0.2"
+    "@types/react-native-background-timer": "*"
   }
 }
