--- a/apps/box/.babelrc
+++ b/apps/box/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "module:metro-react-native-babel-preset",
+      "module:@react-native/babel-preset",
       { "useTransformReactJSXExperimental": true }
     ]
   ],
