--- a/apps/box/android/app/src/debug/AndroidManifest.xml
+++ b/apps/box/android/app/src/debug/AndroidManifest.xml
@@ -10,7 +10,5 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup"
         android:allowBackup="false"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
-    </application>
+        android:networkSecurityConfig="@xml/network_security_config" />
 </manifest>
