--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         </intent-filter>
       </activity>      
       <service android:name="com.asterinet.react.bgactions.RNBackgroundActionsTask"  android:exported="false" />
-      <service android:name="app.notifee.core.ForegroundService" android:foregroundServiceType="dataSync" />
+      <service 
+        android:name="app.notifee.core.ForegroundService" 
+        android:foregroundServiceType="dataSync"
+        tools:replace="android:foregroundServiceType" />
     </application>
 </manifest>
