--- a/apps/box/android/build.gradle
+++ b/apps/box/android/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "34.0.0"
+        buildToolsVersion = "35.0.0"
         minSdkVersion = 26
-        compileSdkVersion = 34
+        compileSdkVersion = 35
         targetSdkVersion = 34
-        kotlinVersion = "1.8.20"
+        kotlinVersion = "1.9.24"
         enableHermes = true
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
-        ndkVersion = "26.2.11394342"
+        ndkVersion = "26.1.10909125"
     }
     repositories {
         google()
@@ -34,7 +34,17 @@ allprojects {
         maven { url 'https://www.jitpack.io' }
     }
 }
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        options.fork = true
+        options.forkOptions.with {
+            memoryMaximumSize = "8g"
+        }
+    }
+}
 // @generated begin detox-import - expo prebuild (DO NOT MODIFY) sync-1c7ed0e9d1c19e4a2b5b79bb7ec877ac879fce8d
 def detoxMavenPath = new File(["node", "--print", "require.resolve('detox/package.json')"].execute(null, rootDir).text.trim(), "../Detox-android")
 allprojects { repositories { maven { url(detoxMavenPath) } } }
 // @generated end detox-import
+apply plugin: "com.facebook.react.rootproject"
