--- a/apps/box/android/settings.gradle
+++ b/apps/box/android/settings.gradle
@@ -1,10 +1,15 @@
-rootProject.name = 'Box'
+pluginManagement { 
+    includeBuild("../node_modules/@react-native/gradle-plugin") 
+}
+plugins { id("com.facebook.react.settings") }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle")
-useExpoModules()
 
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); 
-applyNativeModulesSettingsGradle(settings)
+rootProject.name = 'Box'
+
+include ':expo-modules-core'
+project(':expo-modules-core').projectDir = new File(rootProject.projectDir, '../node_modules/expo-modules-core/android')
+includeBuild("../node_modules/@react-native/gradle-plugin") 
 
 include ':app'
-includeBuild('../node_modules/@react-native/gradle-plugin')
