--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-env": "^7.1.6",
     "@ethersproject/shims": "^5.7.0",
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.54.34",
+    "@functionland/react-native-fula": "1.55.11",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@metamask/sdk": "^0.30.0",
     "@metamask/sdk-react": "^0.30.0",
@@ -93,6 +93,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-syntax-highlighter": "^2.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
@@ -111,6 +112,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-class-static-block": "^7.26.0",
     "@nrwl/js": "17.3.1",
     "@nrwl/workspace": "17.3.1",
     "@nx/detox": "17.3.1",
