--- a/apps/box/android/app/build.gradle
+++ b/apps/box/android/app/build.gradle
@@ -82,8 +82,8 @@ android {
         applicationId "land.fx.blox"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 231
-        versionName "1.6.31"
+        versionCode 232
+        versionName "1.6.32"
         // buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
              
         testBuildType System.getProperty('testBuildType', 'debug')
@@ -127,7 +127,11 @@ android {
             }
         }
     }
-
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
 }
 
 dependencies {
