--- a/package.json
+++ b/package.json
@@ -64,12 +64,15 @@
     "expo-font": "~11.4.0",
     "expo-gl": "~13.0.1",
     "expo-three": "^7.0.0",
+    "i18next": "^24.2.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.4.1",
     "react-native": "0.72.10",
     "react-native-background-timer": "^2.4.1",
     "react-native-ble-manager": "^11.5.7",
