updated vulnarable dependencies

--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -31,14 +31,13 @@
     "@walletconnect/encoding": "*",
     "@walletconnect/react-native-compat": "*",
     "@web3modal/wagmi-react-native": "*",
-    "axios": "*",
+    "axios": "^1.10.0",
     "big-integer": "*",
     "expo": "*",
     "expo-gl": "~13.0.1",
     "expo-three": "*",
-    "lodash": "*",
     "metro-config": "*",
-    "moment": "*",
+    "moment": "2.29.4",
     "node-libs-react-native": "*",
     "react": "*",
     "react-content-loader": "*",
@@ -71,7 +70,7 @@
     "react-native-wifi-reborn": "*",
     "react-native-zeroconf": "*",
     "text-encoding-polyfill": "*",
-    "three": "*",
+    "three": "^0.145.0",
     "viem": "*",
     "wagmi": "*",
     "zustand": "*",
