Corrected Join Poolcorrected Join pool

--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -38,6 +38,7 @@
     "expo-three": "*",
     "metro-config": "*",
     "moment": "2.29.4",
+    "multiformats": "^12.1.3",
     "node-libs-react-native": "*",
     "react": "*",
     "react-content-loader": "*",
